--- a/producerid/pom.xml
+++ b/producerid/pom.xml
@@ -2,32 +2,53 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>producer</groupId>
   <artifactId>producerid</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1</version>
   
   <packaging>jar</packaging>
   <name>producer</name>
   <description>Ejemplo de productor para colas jboss eap amq sin persistencia</description>
   
+  <parent>
+     <groupId>org.springframework.boot</groupId>
+     <artifactId>spring-boot-starter-parent</artifactId>
+     <version>1.3.5.RELEASE</version>
+  </parent>
+
   <dependencies>
- <dependency>
-    <groupId>org.apache.activemq</groupId>
-    <artifactId>activemq-all</artifactId>
-       <version>5.13.3</version>
- 	</dependency>
+  	<!-- <dependency>
+    	<groupId>org.apache.activemq</groupId>
+    	<artifactId>activemq-all</artifactId>
+        <version>5.13.3</version>
+    </dependency> -->
+ 	<dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    
+    <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jms</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-broker</artifactId>
+        </dependency>
+    
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-test</artifactId>
+        <scope>test</scope>
+    </dependency>
+    
  </dependencies>
  
  <build>
-    <sourceDirectory>src</sourceDirectory>
     <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.3</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-          
-        </configuration>
-      </plugin>
-    </plugins>
+	    <plugin>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-maven-plugin</artifactId>
+	    </plugin>
+	</plugins>
   </build>
+
 </project>
