--- a/producerid/.gitignore
+++ b/producerid/.gitignore
@@ -1,1 +1,6 @@
-/target/
+/target/classes/
+/target/generated-sources/
+/target/maven-archiver/
+/target/maven-status/
+/target/test-clases/
+*.jar.original
